--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,25 @@ $max-width: 960px;
 $mobile-width: 700px;
 
 
+body {
+  font-family: 'Roboto', 'Helvetica', sans-serif;
+  color: #444;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Bitter', serif;
+}
+
 
 input {
   font-size: inherit;
+  text-align: center;
+  max-width: 4em;
 }
 
 
@@ -14,7 +30,10 @@ input {
 }
 
 .App-header {
-  background-color: #222;
+  background: #4CB8C4;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3CD3AD, #4CB8C4);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3CD3AD, #4CB8C4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   padding: 20px;
   color: white;
 }
